# modeling_guilt

./: .gitignore  README.md  pyproject.toml
data/splits/: dev.jsonl  test.jsonl
modeling/model/: dataloader.py  main.py
