[tool.poetry]
name = "modeling-guilt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "modeling_guilt"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
transformers = "^4.42.0"
pandas = "^2.2.2"
tensorboard = "^2.17.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
